# easydrop

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: new-release.yml
easydrop/: __main__.py  cli.py  owl.py
